--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,34 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
+
 {% block content %}
-    <h1 class="display-4 text-success">It works!</h1>
+    <!-- The 3 div blocks here shows the use of a basic Bootstrap Grid.
+    To make this entire column to be vertically centred, we'll add the h-100 
+    class to both the container & row to give them 100% height & my-auto 
+    class to the column to vertically center it. -->
+    <div class="container h-100">
+        <div class="row h-100">
+            <!-- We'll use 7 columns by default & 6 columns on medium and larger screens -->
+            <div class="col-7 col-md-6 my-auto">
+                <!-- This will have 3 classes namely display-4 from bootstrap, logo-font & text-black -->
+                <h1 class="display-4 logo-font text-black">
+                    The new collections are here
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
