Add mobile header and main navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
           its background white & add some padding. We also add some classes to ensure that it's 
           only displayed on large screens since this section will look different on mobile. -->
           <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+
             <!-- We want them to stack vertically on all devices except large & extra- 
             large screens So we'll use the col-12 and col-lg-4 for classes on each. We 
             also want them all vertically centred with a bit of top & bottom padding on 
@@ -133,6 +134,25 @@
                     </li>
                   </ul>
               </div>
+          </div>
+          <div class="row bg-white">
+              <nav class="navbar navbar-expand-lg navbar-light w-100">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- We'll 1st include the mobile version of the top header inside the nav 
+                    element just under the button followed by the main nav menu. The reason why 
+                    we used these includes is to keep the base template nice and clean & we also 
+                    have those individual HTML files isolated in case we want to make changes to 
+                    that specific part of the site. -->
+                    {% include 'includes/mobile-top-header.html' %}
+                    {% include 'includes/main-nav.html' %}
+              </nav>    
+          </div>
+          <div id="delivery-banner" class="row text-center">
+              <div class="col bg-black text-white">
+                  <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+              </div>            
           </div>
       </header>
 
