--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,9 @@
                   </a>
               </div>
               <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                  <form method="GET" action=""> 
+                  <!-- Setting the 'action' attribute on the search form means that when we 
+                  submit a search query, it'll end up in the url as a get parameter. -->
+                  <form method="GET" action="{% url 'products' %}"> 
                       <div class="input-group w-100">
                           <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                           <div class="input-group-append">
