--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -6,32 +6,19 @@
         <div class="row">
             <div class="col"></div>
         </div>
-    </div>   
+    </div>
 {% endblock %}
 
-<!-- This is the core of this page & will be a 'container fluid' 
-with 2 rows, one to contain the page title and any currently selected 
-categories & the other for the products themselves. -->
 {% block content %}
-    <!-- The full-page overlay is needed in order to cover up the 
-    body's background image & give this page a white background. -->
     <div class="overlay"></div>
     <div class="container-fluid">
-        <!-- This row will be split into 2 columns. -->
         <div class="row">
-            <!-- we'll offset the 1st col by 2 in order to push it toward 
-                the middle of the screen & will contain same product image
-                as in the products.html template. -->
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
-                        <!-- The image portion of the card uses an if statement that renders the product image using the image fields URL attribute if an image exists.
-                        In the anchor tag on next line, the image will link to the actual image in a new window-->
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
-                        <!-- if an image does not exist, the default image (i.e picture 
-                        of no image) from the media folder will be displayed. -->
                         {% else %}
                         <a href="">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
@@ -39,12 +26,17 @@ categories & the other for the products themselves. -->
                     {% endif %}
                 </div>
             </div>
-            <!-- The 2nd col won't have an offset & will contain all the products details as 
-            well as the buttons to select the size & quantity & add it to the shopping bag -->   
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    {% if product.category %}
+                    <p class="small mt-1 mb-0">
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        </a>
+                    </p>
+                    {% endif %}
                     {% if product.rating %}
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
@@ -52,7 +44,7 @@ categories & the other for the products themselves. -->
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                 </div>
-            </div>   
+            </div>
         </div>
-    </div>   
+    </div>
 {% endblock %}
