--- a/static/css/base.css
+++ b/static/css/base.css
@@ -87,6 +87,11 @@ on all site buttons which gives our users a consistent user experience. */
 	z-index: -1; /* This ensures that the image sits behind all the content. */
 }
 
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+
 
 /* -------------------------------- Media Queries */
 
