--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@
                       'grand total' to determine which classes to apply to the element. If there's 
                       something in the bag i.e grand total exists, the font will be bold and 
                       a different colour else it will just be normal black coloured text. -->
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
