--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -43,6 +43,52 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
+                    <!-- This form will use the post method since we're sending some 
+                    information about the product we want to add to the bag to the server.
+                    We need to use the CSRF token at the very top of the form since 'POST' 
+                    is being used in order to take advantage of Django's cross-site request 
+                    forgery protection. Django won't allow you to submit the form without 
+                    this token as a security precaution.
+                    This form is split into a single form row with two columns. -->
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <!-- This is the 1st column of the form that has an 'input 
+                            group' class & contains the 'quantity' input which will be  
+                            the user's method of selecting how many of this item they
+                            want to purchase i.e it'll allow the user to submit a quantity
+                            & a specific product id to add to the bag. -->
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- This is the 2nd column of the form that contains the submit 
+                            button for the form & a 'Keep Shopping' button which links back 
+                            to the products page. -->
+                            <div class="col-12">
+                                <!-- The 'btn-outline-black' class is an inverted version of 
+                                our custom black buttons & its CSS will be added to base.css. -->
+                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            </div>
+                            <!-- We have the hidden input field here which uses request.path 
+                            attribute to submit a field named 'redirect_url' which will contain 
+                            the current URL. By sending the current URL to the view we are posting 
+                            this form to, we can redirect the user back to the same page once the 
+                            product is added to their bag. -->
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
