--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -53,6 +53,19 @@
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
+                            {% with product.has_sizes as s %}
+                            {% if s %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
+                                        <option value="xs">XS</option>
+                                        <option value="s">S</option>
+                                        <option value="m" selected>M</option>
+                                        <option value="l">L</option>
+                                        <option value="xl">XL</option>
+                                    </select>
+                                </div>
+                            {% endif %}
                             <!-- This is the 1st column of the form that has an 'input 
                             group' class & contains the 'quantity' input which will be  
                             the user's method of selecting how many of this item they
@@ -69,8 +82,12 @@
 
                             <!-- This is the 2nd column of the form that contains the submit 
                             button for the form & a 'Keep Shopping' button which links back 
-                            to the products page. -->
-                            <div class="col-12">
+                            to the products page.
+                            We'll reuse the s variable here in this last column in order to 
+                            make it full width & have a little top margin only if the product 
+                            has sizes. It's just an aesthetic thing to make it look a bit cleaner 
+                            by evening up the margins & spacing. -->
+                            <div class="col{% if s %}-12 mt-2{% endif %}">
                                 <!-- The 'btn-outline-black' class is an inverted version of 
                                 our custom black buttons & its CSS will be added to base.css. -->
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
@@ -87,6 +104,7 @@
                             this form to, we can redirect the user back to the same page once the 
                             product is added to their bag. -->
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            {% endwith %}
                         </div>
                     </form>
                 </div>
