--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -75,7 +75,33 @@
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <!-- Here below, we'll attach some plus & minus buttons 
+                                        to this input to make it easier to use on mobile & also 
+                                        to align it more closely with our current black and white theme. -->
+                                        <div class="input-group-prepend">
+                                            <!-- The 'data item id' & 'id' attributes on both 
+                                            button elements below will be used in the JScript 
+                                            we'll write to handle updating the input box since 
+                                            these buttons won't do anything by default. -->
+                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number" 
+                                            name="quantity" value="1" min="1" max="99" 
+                                            data-item_id="{{ product.id }}" 
+                                            id="id_qty_{{ product.id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-black rounded-0"
+                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
                                     </div>
                                 </div>
                             </div>
@@ -111,4 +137,9 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
