Add quantity boxes to shopping bag page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,7 +110,9 @@ right of the screen. */
 }
 
 /* This makes the cursor into a pointer. */
-.btt-link {
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 
