--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -72,7 +72,53 @@
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <p class="my-0">{{ item.quantity }}</p>
+                                        <!-- <p class="my-0">{{ item.quantity }}</p> -->
+                                        <form class="form update-form" method="POST" action="">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                            data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                            <span>
+                                                                <i class="fas fa-minus fa-sm"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                    <input class="form-control form-control-sm qty_input" type="number"
+                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                        data-item_id="{{ item.item_id }}"
+                                                        id="id_qty_{{ item.item_id }}">
+                                                    <div class="input-group-append">
+                                                        <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                            data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                            <span>
+                                                                <i class="fas fa-plus fa-sm"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                    <!-- We'll submit the size of the item the 
+                                                    user wants to update or remove in a hidden 
+                                                    input field if the product have sizes. -->
+                                                    {% if item.product.has_sizes %}
+                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
+                                                    {% endif %}
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <!-- There's no submit button within the form above & 
+                                        it's for a purpose i.e to keep the visual impact mini-
+                                        mal. We'll just use a simple link and handle its click 
+                                        event with JScript. Under the form, we'll create 2 anch-
+                                        or elements; one for updating the quantity which will 
+                                        submit the form & the other for removing the item from 
+                                        the bag entirely. The one for removing the bag will have 
+                                        a data attribute similar to the 'data item id' attributes 
+                                        on the buttons & that will be used to discern which spec-
+                                        ific item the customer wants to remove if there are mult-
+                                        iple sizes of this item in the bag. -->
+                                        <a class="update-link text-info"><small>Update</small></a>
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
@@ -131,4 +177,59 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<!-- Below is the JScript to handle the 'Update' & 'Remove'  
+elements on the shopping cart when it's clicked. -->
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        /* The 'previous i.e prev' method will be used to find the most recently 
+        seen update form in the Dom & store the form in a variable called 'form'. */ 
+        var form = $(this).prev('.update-form');
+        // Then we call the forms submit method.
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    /* What we'll do in this section is post some data to a URL that 
+    will be created later & once the response comes back from the server,
+    the page is reloaded to reflect the updated bag. */
+    $('.remove-item').click(function(e) {
+        /* The CSRF token will be stored as a string in a variable called 
+        csrfToken. NOTE that this uses the actual template variable with 
+        the double curly brackets as opposed to the template tag which uses 
+        the inner percent signs. This is bcos the former renders the actual 
+        token while the latter renders a hidden input field in a form. */ 
+        var csrfToken = "{{ csrf_token }}";
+        /* To get the 'item id', we'll obtain it by splitting the ID of the 
+        update link being clicked on at the underscore & taking the 2nd half 
+        of it. We named the entire 1st part of the string here 'remove_' just 
+        to be very explicit about what we're splitting. */ 
+        var itemId = $(this).attr('id').split('remove_')[1];
+        /* To get the size, we'll use the 'data' method to pull it from the data size attribute */ 
+        var size = $(this).data('size');
+        /*  We need URL which will be bag/remove/the itemId. This will be a template literal
+        & we'll make this URL later. */ 
+        var url = `/bag/remove/${itemId}`;
+        /* Lastly, we need data which is the object we'll use to send this data to the server
+        which will contain a special key all in lowercase with no spaces called 'CSRF middleware 
+        token' & our 'var csrfToken' above as its value & it'll contain the 'size' key & our 
+        'var size' above as its value too. */ 
+        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+
+        /* NOTE: The CSRF middleware token key must match the field Django is expecting
+        to see in request.post when we post it to the server & we'll achieve that by 
+        using the 'post' method from jQuery giving it both the URL and the data. */ 
+        $.post(url, data)
+        // When done, it'll execute a function to reload the page.
+         .done(function() {
+             location.reload();
+         });
+    })
+</script>
 {% endblock %}
